--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "pngjs": "^7.0.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.8.3",
-    "typescript-to-lua": "^1.31.0"
+    "typescript-to-lua": "^1.31.0",
+    "watcher": "^2.3.1"
   },
   "devDependencies": {
-    "@aeony/prettier-config": "^1.0.0",
     "@aeony/eslint-config": "^1.0.2",
+    "@aeony/prettier-config": "^1.0.0",
     "@types/archiver": "^6.0.3",
     "@types/pngjs": "^6.0.5",
     "eslint": "^9.26.0",
